# dmx-box

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  \  partitions.csv  sdkconfig.defaults
.github/workflows/: build.yml
assets/: xlr_pinouts_license.md
components/dmxbox_api/: CMakeLists.txt  api_config.c  api_strings.c  api_strings.h  artnet.c  artnet.h  dmx.c  dmx.h  dmxbox_api.c  dmxbox_uri.c  dmxbox_uri.h  effects.c  effects.h  effects_steps.c  effects_steps.h  router_effects.c  router_effects.h  serializer.c  serializer.h  settings_artnet.c  settings_artnet.h  settings_sta.c  system.c  system.h  ws.c  ws_ap_found.c
components/dmxbox_api/include/: dmxbox_api.h
components/dmxbox_artnet/: CMakeLists.txt  artnet_client_tracking.c  artnet_client_tracking.h  artnet_const.h  dmxbox_artnet.c  hashmap.c  hashmap.h
components/dmxbox_const/: CMakeLists.txt
components/dmxbox_dmx/: CMakeLists.txt  const.h  dmxbox_dmx_receive.c  dmxbox_dmx_send.c
components/dmxbox_dns/: CMakeLists.txt  dmxbox_dns.c
components/dmxbox_effects/: CMakeLists.txt  dmxbox_effects.c
components/dmxbox_espnow/: CMakeLists.txt  dmxbox_espnow.c
components/dmxbox_httpd/: CMakeLists.txt  api_config.c  api_cors.c  cors.c  json.c  receive_json.c  receive_json.h  responses.c  scratch.c  scratch.h  settings_sta.c  statics.c  statics.h  ui.c  ui.h  webserver.c  ws.c  ws_ap_found.c
components/dmxbox_httpd/api/: api_strings.c  api_strings.h  settings_sta.c  settings_sta.h
components/dmxbox_httpd/include/: dmxbox_httpd.h
components/dmxbox_httpd/private/: api_strings.c  api_strings.h  cors.c  receive_json.c  receive_json.h  scratch.h
components/dmxbox_led/: CMakeLists.txt  dmxbox_led.c
components/dmxbox_recalc/: CMakeLists.txt  dmxbox_recalc.c
components/dmxbox_rest/: CMakeLists.txt  dmxbox_rest.c  dmxbox_uri.c
components/dmxbox_storage/: CMakeLists.txt  dmxbox_storage.c  effect_step_storage.c  effect_storage.c  private.c  private.h
components/dmxbox_ui/: CMakeLists.txt  package-lock.json  package.json
components/dmxbox_ui/src/: App.tsx  i18n.d.ts  index.html  main.tsx
components/dmxbox_ui/src/api/: artnet.ts  index.tsx  wifi.ts
components/dmxbox_ui/src/components/: FormHeader.tsx  FormRowSelect.tsx  Input.tsx  LinkWithSearchParams.tsx  Select.tsx  WsSubscription.tsx
components/dmxbox_ui/src/pages/: WiFi.tsx  index.ts
components/dmxbox_ui/src/pages/WiFi/: WiFiSecurity.tsx
components/dmxbox_ui/src/pages/artnet/: ArtnetForm.tsx  ArtnetPage.tsx  api.ts  index.ts  schema.ts
components/dmxbox_ui/src/pages/effect/: EffectEditor.tsx  EffectPage.tsx  StepPage.tsx  StepTimes.tsx  index.tsx
components/dmxbox_ui/src/pages/main/: MainPage.tsx
components/dmxbox_ui/src/pages/settings/: SettingsPage.tsx  WiFiForm.tsx  WifiNetwork.tsx  WifiNetworkList.tsx  WifiPasswordForm.tsx  index.ts  schema.ts
components/dmxbox_ui/src/resources/: en.json
components/dmxbox_wifi/: CMakeLists.txt  private.h  wifi.c  wifi_events.c  wifi_scan.c
container/: Dockerfile  Dockerfile.espidf  Dockerfile.node  build.sh  run.sh
dmxui/: Makefile  package-lock.json  package.json  tsconfig.json
dmxui/src/: App.tsx  app.tsx  index.html  main.tsx
front/: .eslintrc.js  vue.config.js
front/public/: index.html
front/src/: App.vue  store.js
main/: CMakeLists.txt  const.h  dns.c  dns.h  factory_reset.c  factory_reset.h  hashmap.c  hashmap.h  led.c  led.h  main.c  recalc.c  recalc.h  storage.c  storage.h  webserver.c  webserver.h  wifi.c  wifi.h  wifi_scan.c
main/artnet/: artnet.c  artnet.h  artnet_client_tracking.c  artnet_client_tracking.h  artnet_const.h
main/dmx/: dmx_receive.c  dmx_receive.h  dmx_send.c  dmx_send.h
main/effects/: effects.c  effects.h
main/webserver/: api_config.c  api_config.h  api_cors.h  api_wifi_scan.c  api_wifi_scan.h  static_files.c  static_files.h  ui.c  webserver.c  webserver.h  wifi_scan.c  wifi_scan.h  ws.c  ws.h  ws_ap_found.h
pcb/: dmx-box-rounded.kicad_pcb  dmx-box-rounded.kicad_prl  dmx-box-rounded.kicad_pro  dmx-box.csv  dmx-box.kicad_pcb  dmx-box.kicad_prl  dmx-box.kicad_pro  dmx-box.kicad_sch  dmx-box.round-tracks-config  dmx-box.step  dmx-box.xlsx  dmx-box.xml
pcb/jlcpcb-gerbers-v1/: dmx-box-NPTH.drl  dmx-box-PTH.drl  dmx-box-rounded-B_Cu.gbl  dmx-box-rounded-B_Mask.gbs  dmx-box-rounded-B_Paste.gbp  dmx-box-rounded-B_Silkscreen.gbo  dmx-box-rounded-Edge_Cuts.gm1  dmx-box-rounded-F_Cu.gtl  dmx-box-rounded-F_Mask.gts  dmx-box-rounded-F_Paste.gtp  dmx-box-rounded-F_Silkscreen.gto  dmx-box-rounded-NPTH-drl_map.gbr  dmx-box-rounded-NPTH.drl  dmx-box-rounded-PTH-drl_map.gbr  dmx-box-rounded-PTH.drl  dmx-box-rounded.drl  dmx-box-rounded_drill.gcode  dmx-box-rounded_drill.txt  (+1 more)
scripts/: container.sh
(+33 files in other folders)
