idf_component_register(
    SRCS
        "artnet/artnet.c"
        "dmx/dmx_receive.c"
        "dmx/dmx_send.c"
        "dns.c"
        "effects/effects.c"
        "factory_reset.c"
        "hashmap.c"
        "main.c"
        "recalc.c"
        "storage.c"
    INCLUDE_DIRS "."
    REQUIRES 
      dmxbox_httpd
      dmxbox_led
      dmxbox_wifi
      esp32-button
      esp_dmx
      spiffs
)
