idf_component_register(
    SRCS
      factory_reset.c
      main.c
      webserver.c
    INCLUDE_DIRS .
    REQUIRES
      dmxbox_api
      dmxbox_artnet
      dmxbox_dmx
      dmxbox_dns
      dmxbox_effects
      dmxbox_httpd
      dmxbox_led
      dmxbox_recalc
      dmxbox_storage
      dmxbox_wifi
      esp_dmx
      esp32-button
      spiffs
)
