idf_component_register(
  SRCS
    api_config.c
    api_strings.c
    dmxbox_api.c
    effects.c
    effects_steps.c
    router_effects.c
    settings_sta.c
    serializer.c
    ws.c
    ws_ap_found.c
  INCLUDE_DIRS include
  REQUIRES
    dmxbox_httpd
    dmxbox_rest
    dmxbox_storage
    dmxbox_wifi
    esp_http_server
    json
    vfs
)
