idf_component_register(
  SRCS
    api_config.c
    api_strings.c
    dmx.c
    dmxbox_api.c
    artnet.c
    effects.c
    effects_steps.c
    settings_artnet.c
    settings_sta.c
    serializer.c
    system.c
    ws.c
    ws_ap_found.c
  INCLUDE_DIRS include
  REQUIRES
    dmxbox_artnet
    dmxbox_dmx
    dmxbox_httpd
    dmxbox_rest
    dmxbox_storage
    dmxbox_wifi
    esp_http_server
    json
    vfs
)
